# lct-adera-2025

./: .gitignore  README.md  dashboard  eslint.config.mjs  package.json
_docker/: .env.example  docker-compose.yml
docs/postman/: core.postman_collection.json
research/: README.md  pyproject.toml  readme.md
research/code/: classifier_checkout.py  modify_parsed_data_from_banki_ru.py  test_classification.py  tests.py  train_sentiment_models.py  try_key_bert.py
research/drafts/: clusterization.py  sentement_analize_checkout_trained_models.py  topic_modelling.py  try_prebinded_topics.py
research/htmls/: test_classification.html  train_sentiment_models.html
research_data/: readme.md
scripts/: README.md  pyproject.toml
scripts/db_filler_from_flat_data/: main.py  refiller_data.py
scripts/examples/: example.env
