[project]
name = "research"
version = "0.1.0"
description = ""
authors = [
    {name = "MikeTS",email = "mike.tsvirkunov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "marimo (>=0.16.2,<0.17.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "sentence-transformers (>=5.1.1,<6.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "umap (>=0.1.1,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
